--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line_length = 119
-exclude = ".git"
+exclude = ".git|README.md"
 
 [tool.isort]
 line_length = 119
 multi_line_output = 1
+skip = ["README.md"]
 
 [tool.mypy]
 disallow_untyped_defs = true
 warn_return_any = true
-exclude = "venv"
+exclude = "venv|README.md"
